# cubed-cupy

./: .gitignore  README.md  justfile  pyproject.toml
scripts/: larger.py  main.py  matmul.py  simple.py
